# kpsr-core

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Jenkinsfile  KlepsydraConfig.cmake.in  KlepsydraConfigVersion.cmake.in  LICENSE.md  README.md  make_cppcheck.sh  make_extract_gtestresults.sh
benchmarks/: CMakeLists.txt
benchmarks/basic_mddlw_test/: CMakeLists.txt
benchmarks/common/: laser_scan_event.h  point3d_cloud.h  test_result_data.h
benchmarks/concurrent_mdlw_test/: CMakeLists.txt
benchmarks/event_emitter_test/: CMakeLists.txt
benchmarks/event_emitter_test/src/: event_emitter_benchmark.cpp
benchmarks/high_performance/: CMakeLists.txt
benchmarks/high_performance/src/: event_loop_benchmark.cpp  eventloop_datamultiplexer_benchmarks.cpp  high_perf_publish_benchmarks.cpp
benchmarks/smart_pool/: CMakeLists.txt
code_generator/cpp_testing/: CMakeLists.txt
code_generator/cpp_testing/modules/: CMakeLists.txt
code_generator/cpp_testing/modules/codegen/: CMakeLists.txt
code_generator/cpp_testing/tests/: CMakeLists.txt
code_generator/cpp_testing/tests/codegen_tests/: CMakeLists.txt
code_generator/cpp_testing/tests/dds_codegen_tests_1_2/: CMakeLists.txt
code_generator/cpp_testing/tests/dds_codegen_tests_1_5/: CMakeLists.txt
code_generator/cpp_testing/tests/dds_codegen_tests_3_4/: CMakeLists.txt
code_generator/cpp_testing/tests/kpsr_ros_codegen/: CMakeLists.txt  package.xml
code_generator/cpp_testing/tests/zmq_codegen_tests/: CMakeLists.txt
code_generator/kpsr_codegen/: CMakeLists.txt  __main__.py
code_generator/kpsr_codegen/conf/: dds_types.yaml  fundamental_types.yaml  ros_types.yaml  type_modifiers.yaml  type_modifiers_cpp.yaml  type_modifiers_dds.yaml  type_modifiers_ros.yaml
code_generator/kpsr_codegen/generator/: __init__.py  generator_engine.py
code_generator/kpsr_codegen/kidl_data/: __init__.py  class_definition.py  enum_definition.py  field_definition.py  middleware_definition.py  middleware_type.py
code_generator/kpsr_codegen/preprocessor/: __init__.py  configuration.py  field_preprocessor.py  middleware_preprocessor.py  preprocessor.py
code_generator/kpsr_codegen/processor/: __init__.py  dds_idl_processor.py  dds_mapper_processor.py  node_handler_processor.py  poco_processor.py  ros_mapper_processor.py  ros_msg_processor.py  zmq_serializer_processor.py
code_generator/kpsr_codegen/render_data/: dds_idl_definition.py  dds_mapper_definition.py  node_handler_definition.py  poco_definition.py  ros_mapper_definition.py  ros_msg_definition.py  zmq_serializer_definition.py
code_generator/kpsr_codegen/templates/: dds_mapper_template.h  dds_template.idl  node_handler_template.js  poco_builder_template.h  poco_template.h  ros_mapper_template.h  ros_template.msg  zmq_serializer_template.h
code_generator/kpsr_codegen/tests/: poco_processor_test.py  poco_renderer_test.py  preprocessor_test.py  ros_mapper_processor_test.py  ros_mapper_renderer_test.py  ros_msg_processor_test.py  ros_msg_renderer_test.py
code_generator/kpsr_codegen/tests/examples/: basic_class.yaml  basic_class_with_builder.yaml  basic_class_with_ros_mdlw.yaml  class_with_enums.yaml  class_with_parent_class.yaml  class_with_parent_class_and_builder.yaml  class_with_related_classes.yaml  class_with_ros_mdlw_and_parent_class.yaml  class_with_ros_mdlw_and_related_classes.yaml
code_generator/kpsr_codegen/tests/expected_output/: class_with_related_class_poco.h
core/: CMakeLists.txt
core/examples/: CMakeLists.txt
core/examples/socket_mdlw/: CMakeLists.txt
core/examples/socket_mdlw/src/: client.cpp  server.cpp
core/modules/: CMakeLists.txt
core/modules/core/: CMakeLists.txt
core/modules/core/src/: configuration_environment.cpp  container.cpp  core_container.cpp  event_emitter.cpp  prop_file_environment.cpp  version.cpp  version.cpp.in
core/modules/dds_mdlw/: CMakeLists.txt
core/modules/dds_mdlw/idl/: dds_configuration_data.idl
core/modules/mem_mdlw/: CMakeLists.txt
core/modules/socket_mdlw/: CMakeLists.txt
core/modules/yaml_env/: CMakeLists.txt
core/modules/zmq_mdlw/: CMakeLists.txt
core/tests/: CMakeLists.txt
core/tests/common/: config.h.in
core/tests/core_tests/: CMakeLists.txt
core/tests/data/: config_env_bad_json.json  config_env_missing_bool.json  config_env_missing_float.json  config_env_missing_int.json  config_env_missing_string.json  config_env_test.json  propenvtest.txt  testfile1.json  testfile1.yaml  testfile2.json  testfile2.yaml
core/tests/dds_core_tests/: CMakeLists.txt
core/tests/mem_core_tests/: CMakeLists.txt
core/tests/performance/: CMakeLists.txt
core/tests/yaml_core_tests/: CMakeLists.txt
core/tests/zmq_core_tests/: CMakeLists.txt
high_performance/: CMakeLists.txt
high_performance/modules/: CMakeLists.txt
high_performance/modules/high_performance/: CMakeLists.txt
high_performance/tests/: CMakeLists.txt
high_performance/tests/benchmarks/: CMakeLists.txt
high_performance/tests/common/: laser_scan_event.h  point3d_cloud.h  test_result_data.h
high_performance/tests/dds_high_performance_tests/: CMakeLists.txt
high_performance/tests/disruptor4cpp_test/: CMakeLists.txt
high_performance/tests/high_performance_tests/: CMakeLists.txt
high_performance/tests/performance/: CMakeLists.txt
high_performance/tests/zmq_high_performance_tests/: CMakeLists.txt
node/: CMakeLists.txt
node/examples/ros_mdlw/: kpsr_ros_sample1.js  package.json  ros_example.js
node/modules/: CMakeLists.txt
node/modules/ros_mdlw/: kpsr_ros_connector.js  primitive_types_ros_handler.js
serialization/: CMakeLists.txt
serialization/modules/: CMakeLists.txt
serialization/modules/dds_mdlw/: CMakeLists.txt
serialization/modules/serialization/: CMakeLists.txt
serialization/tests/: CMakeLists.txt
serialization/tests/serialization_tests/: CMakeLists.txt
state_machine/modules/yaml_conf/: CMakeLists.txt
state_machine/tests/: CMakeLists.txt
state_machine/tests/data/: sm1.json  sm1.yaml
state_machine/tests/state_machine_tests/: CMakeLists.txt
thirdparties/: CMakeLists.txt
(+396 files in other folders)
